# migrant_dashboard

./: .gitignore  README.md  chart_helper.py  dashboard.py  execute_all.py  extract_data.py  ingest_7_day_data.py  ingest_daily_data.py  ingest_weekly_data.py  migrant_crossings_db.duckdb  pyproject.toml
data/: 02_January_2026_Small_boats_-_time_series.ods
queries/: create_latest_views.sql  create_raw_table_statements.sql
