[project]
name = "migrant-dashboard"
version = "0.1.0"
description = "Contains UK Government statistical data for migrant crossings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.11.12",
    "duckdb>=1.4.3",
    "fastexcel>=0.18.0",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]
